assets/css/style.css
/* Font link */
@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');

/* Site default */
* {
  margin: 0;
  padding: 0;
  border: none;
  box-sizing: border-box;
}

body {
  font-family: Raleway, sans-serif;
  font-weight: 300;
  background-color: #eff1f3;
}

div {
  max-width: 1280px;
  margin: auto;
}

section {
  max-width: 1280px;
  margin: auto;
  margin-bottom: 60px;
}

/* title and nav bar */


#logo {
  text-decoration: none;
  color: #eff1f3;
  background: transparent;
  float: left;
  font-size: 200%;
  line-height: 60px;
  text-align: center;
  width: 100%;
}

.top-bar {
  background-color: #C45131;
  overflow: hidden;
  height: 60px;
  width: 100%;
}

.nav {
  overflow: hidden;
  background-color: #C45131;
}

/* Credit  https://www.w3schools.com/howto/howto_js_nav.nav_responsive.asp*/
.nav a {
  float: left;
  display: block;
  color: #fff;
  text-align: center;
  padding: 15px;
  text-decoration: none;
  font-size: 20px;
}

.nav a:hover {
  background-color: #ddd;
  color: black;
}

.nav a.active {
  background-color: #eff1f3;
  color: black;
}

.nav .icon {
  display: none;
}

@media screen and (max-width: 600px) {
  .nav a:not(:first-child) {
    display: none;
  }

  .nav a.icon {
    float: right;
    display: block;
  }

  .nav.responsive {
    position: relative;
  }

  .nav.responsive .icon {
    position: absolute;
    right: 0;
    top: 0;
  }

  .nav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
}

/* Hero section */

#hero {
  width: 100%;
  overflow: hidden;
  position: relative;
}


#hero-tag {
  font-size: 100%;
  text-transform: uppercase;
  letter-spacing: 4px;
  padding: 15px 20px;
  text-align: center;

}

/* Statistics section */

.stat-row {
  display: flex;
  position: relative;
  align-items: center;
}

.stat-row:nth-of-type(odd) {
  flex-direction: row-reverse;
}

.index-stat {
  letter-spacing: 2px;
  line-height: 120%;
  margin: 15px;
  padding: 10px;
  width: 50%;

}

.index-stat p {
  text-align: justify;
}

.stat-image {
  display: flex;
  justify-content: center;
  align-items: center;
}

.stat-image img {
  height: 20vh;
  margin: 15px;
  padding: 10px;
}

.source-ref {
  font-size: 50%;
  padding-right: 20px;
  text-decoration: none;
  color: black;
  clear: both;
  float: right;
}

.source-ref a {
  text-decoration: none;
  color: black;
  clear: both;
  float: right;
}

@media screen and (max-width:600px) {
  .stat-row {
    flex-direction: column;
  }

  .stat-row:nth-of-type(odd) {
    flex-direction: column;
  }

  .stat-image img {
    height: 10vh;
    margin: 15px;
    padding: 0;
  }

  .index-stat {
    width: auto;
  }
}


/* Information sections */

.section-title {
  clear: both;
  margin-left: 30px;
  padding: 15px;
}

.center-info {
  letter-spacing: 2px;
  line-height: 120%;
  width: 80%;
  margin: auto;
  justify-self: center;
  padding: 10px;
}

.center-info p {
  text-align: justify;
}

.highlight-bar {
  margin: auto;
  width: 100%;
  color: black;
  background-color: #e6b01c;
  font-weight: 600;
}

.highlight-block {
  width: 100%;
  color: black;
  background-color: #e6b01c;
  background-clip: padding-box;
  font-weight: 600;
}

.highlight-block ul {
  margin: auto 40px;
  list-style: circle;
  line-height: 30px;
}

@media screen and (min-width:850px) {

  .col-50 {
    width: 50%;
    float: left;
  }

  .split-div {
    display: flex;
    justify-content: center;
  }
}

/* Issues section */

.center-list {
  letter-spacing: 2px;
  width: 80%;
  margin: auto;
  justify-self: center;
  padding: 10px;
}

.center-list ol {
  text-align: justify;
  list-style: none;
  counter-reset: item;
  line-height: 120%;
}

.center-list ol>li {
  counter-increment: issue;
  margin-bottom: 20px;
}

.center-list ol>li:before {
  margin-right: 10px;
  content: counter(issue);
  background: #3a3a3a;
  border-radius: 100%;
  color: white;
  width: 1.2em;
  text-align: center;
  display: inline-block;
}

.center-list ul {
  padding-left: 10%;
}

.center-list ul>li {
  padding-top: 20px;
}

/* Section separation */

.section-image {
  display: flex;
  justify-content: center;
  align-items: center;
}

.section-image img {
  max-width: 100%;
}


/* Sign-up form */

.sign-up-container {
  width: 80%;
  max-width: 800px;
  margin: auto;
  margin-bottom: 80px;
}

.sign-up-container h2 {
  margin: auto;
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 4px;
  padding: 15px 20px;
}

.sign-up-container p {
  margin: auto;
  text-align: center;
  padding: 15px 20px;
}

input[type=text],
input[type=email],
select,
textarea {
  width: 100%;
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;
  resize: vertical;
}

label {
  padding: 12px 12px 12px 0;
  display: inline-block;
}

#sign-up-info {
  display: block;
  margin: auto;
}


input[type=submit] {
  display: block;
  background-color: #C45131;
  color: white;
  padding: 15px 20px;
  border: none;
  border-radius: 3px;
  cursor: pointer;
  width: 50%;
  margin: 20px auto;
}

input[type=submit]:hover {
  background-color: #da4e28;
}

@media screen and (max-width: 600px) {

  .sign-up-container h2, p {
    margin: auto 10px;
    text-align: center;
    padding: 15px;
  }

  input[type=text],
  input[type=email],
  select,
  textarea {
    width: 100%;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 4px;
    resize: vertical;
  }

  label {
    padding: 12px 12px 12px 0;
    display: inline-block;
  }

  #sign-up-info {
    display: block;
    margin: auto 10px;
  }
}

/* Footer */

footer {
  background-color: #C45131;
  overflow: hidden;
  height: 60px;
  width: 100%;
  position: fixed;
  bottom: 0;
}

footer p {
  text-align: right;
  float: right;
  clear: both;
  font-size: 20%;
}

.footer-links {
  text-align: center;
}

.footer-links>li {
  display: inline;
}

.footer-links i {
  margin: 10px;
  padding: 5px;
  color: #fff;
}

/* Thank you page */

#thank-you {
  font-size: 100%;
  text-transform: uppercase;
  letter-spacing: 4px;
  padding: 15px 20px;
  text-align: center;
}

#thank-you h2 {
  padding-bottom: 20px;
}

